<resources>
    <string name="app_name">My Account</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="move_to_next">You are not in DataBase.Do you want to sign up?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="works">Registration</string>
    <string name="wrong_login">Wrong login</string>
    <string name="wrong_password">Wrong pass</string>
    <string name="name_empty">Input login. At least 4 symbols and not longer 8. </string>
    <string name="password_empty">Input pass. At least 4 symbols and not longer 8.</string>
    <string name="registration">Input user name and pass. At least 4 symbols and not longer 8.</string>
    <string name="finish_registration">Register success</string>
    <string name="user_is">This user already exist</string>
    <string name="login_is">The user, with this name is already exist</string>
    <string name="SignIn">SIGN IN</string>
    <string name="SignUp"> <u> I don\'t have an account </u> </string>
    <string name="Login">Login</string>
    <string name="UserPassword">Password</string>
    <string name="TextButtonIncome">INCOMES</string>
    <string name="TextButtonDebts">DEBTS</string>
    <string name="TextButtonPlanning">PLANNING</string>
    <string name="TextButtonCategories">CATEGORIES</string>
    <string name="TextButtonReports">REPORTS</string>
    <string name="TextButtonSettings">SETTINGS</string>
    <string name="TextButtonCurrency">CURRENCY</string>
    <string name="TextButtonCosts">COSTS</string>
    <string-array name="dialog_list">
        1
        2
        3 4 5 6 7 8 9
    </string-array>
    <string-array name="image_dialog">
        R.drawable.logo1
        R.drawable.logo1
        R.drawable.logo1
        R.mipmap.ic_launcher
        R.mipmap.ic_launcher
        R.mipmap.ic_launcher
        R.mipmap.ic_launcher
    </string-array>

    <string-array name="tabs_name">
        <item>Costs</item>
        <item>Incomes</item>

    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="CategoryDeclaration">Category</string>
    <string name="nameDeclaration">nameDeclaration</string>
    <string name="ConfirmTextButton">SAVE</string>
    <string name="CostCategoryText">Categories</string>
    <string name="CostCategoryName">Name</string>
    <string name="incomeTextCategory">Categories</string>
    <string name="incomeNameText">Name</string>
    <string name="AddingCategoryButton">Add category</string>
    <string name="spinner_title">SpinnerCostsTitle</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="reg_password">Password</string>
    <string name="reg_login">Login</string>
    <string name="sign_login_hint">Login</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="registration_failed_error">Registration failed</string>
    <string name="invalid_data">Invalid data</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="main_screen_income_header">Incomes</string>
    <string name="main_screen_costs_header">Costs</string>
    <string name="choose_category_color_text">Choose category color</string>
    <string name="transfer_add_category">ADD NEW CATEGORY</string>
    <string name="enter_name_cost">Enter name</string>
    <string name="enter_amount_cost">Enter amount</string>
    <string name="add_new_category_">ADD NEW CATEGORY</string>
    <string name="enter_name_income">Enter name</string>
    <string name="enter_sum">Enter amount</string>
    <string name="add_cost_ac_bar">Add cost</string>
    <string name="add_income_ac_bar">Add income</string>
    <string name="SignUpButton">Sign up</string>
    <string name="SignInText">I have an account</string>
</resources>