<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <Button
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:text="@string/TextButtonCosts"
        android:layout_marginRight="10dp"
        android:id="@+id/buttonCosts" />

    <Button
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:text="@string/TextButtonIncome"
        android:id="@+id/buttonIncome"
        android:layout_marginLeft="10dp"
        android:layout_row="0"
        android:layout_column="10" />

    <Button
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:text="@string/TextButtonCategories"
        android:id="@+id/buttonCategories"
        android:layout_marginRight="10dp"
        android:layout_row="2"
        android:layout_column="0" />

    <Button
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:text="@string/TextButtonSettings"
        android:id="@+id/buttonSettings"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:layout_row="2"
        android:layout_column="10" />


</GridLayout>