<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.erminesoft.my_account.myacount.ui.activities.ContentForCostsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AccountantAppStyle">

        <android.support.v7.widget.Toolbar
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />


    </android.support.design.widget.AppBarLayout>



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/transferToCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_add_category"
        android:textSize="18sp"
        android:paddingTop="25dp"
        android:textColor="@color/colorBlue"
        android:layout_gravity="right"/>


    <EditText
        android:id="@+id/EditTextNameCosts"
        android:hint="@string/enter_name_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp" />

    <EditText
        android:id="@+id/EditTextSumCosts"
        android:hint="@string/enter_amount_cost"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp" />

    <Button
        android:id="@+id/ButtonConfirmChoice"
        android:text="@string/ConfirmTextButton"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@color/main_screen_income_button_light_green"/>


</LinearLayout>
