<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.erminesoft.my_account.myacount.ui.activities.ContentForIncomeActivity">



        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AccountantAppStyle">


        <android.support.v7.widget.Toolbar
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerIncome"
            android:spinnerMode="dropdown">
        </Spinner>

    <TextView
        android:id="@+id/transferToCategoryFromIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_category_"
        android:textSize="18sp"
        android:layout_gravity="right"
        android:paddingTop="25dp"
        android:textColor="@color/colorBlue"/>


    <EditText
        android:id="@+id/EditTextNameIncome"
        android:hint="@string/enter_name_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp" />

    <EditText
        android:id="@+id/EditTextSumIncome"
        android:hint="@string/enter_sum"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp" />

    <Button
        android:id="@+id/ButtonConfirmChoiceIncome"
        android:text="@string/ConfirmTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textSize="20sp" />



</LinearLayout>
