<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="@dimen/login_screen_logo_margin_top"
        android:layout_marginBottom="@dimen/login_screen_logo_margin_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/registration_screen_form_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration_screen_login_wrapper_margin_top"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registration_login_wrap"
                android:hint="@string/reg_login"
                app:hintTextAppearance="@color/registration_screen_form_text_color"
                android:backgroundTint="@color/registration_screen_form_text_color"
                android:textColorHint="@color/registration_screen_form_text_color"
                android:textColorHighlight="@color/registration_screen_form_text_color"
                android:paddingLeft="@dimen/registration_screen_input_layout_paddings"
                android:paddingRight="@dimen/registration_screen_input_layout_paddings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- <EditText
                     android:id="@+id/editTextLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/login"
                     android:inputType="textPersonName" />-->

                <EditText
                    android:id="@+id/registration_login_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textCursorDrawable="@null"
                    app:hintTextAppearance="@color/registration_screen_form_text_color"
                    android:backgroundTint="@color/registration_screen_form_text_color"
                    android:textColorHint="@color/registration_screen_form_text_color"
                    android:textColorHighlight="@color/registration_screen_form_text_color"
                    android:textColor="@color/registration_screen_form_text_color"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <!-- <android.support.design.widget.TextInputLayout
                 android:id="@+id/sign_in_password_wrap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <EditText
                     android:id="@+id/editTextPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="@string/password"
                     android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration_screen_text_wrapper_margin_top"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registration_password_wrap"
                app:hintTextAppearance="@color/registration_screen_form_text_color"
                android:backgroundTint="@color/registration_screen_form_text_color"
                android:textColorHint="@color/registration_screen_form_text_color"
                android:textColorHighlight="@color/registration_screen_form_text_color"
                app:hintAnimationEnabled="true"
                android:hint="@string/reg_password"
                android:paddingLeft="@dimen/registration_screen_input_layout_paddings"
                android:paddingRight="@dimen/registration_screen_input_layout_paddings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registration_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:textCursorDrawable="@null"
                    app:hintTextAppearance="@color/registration_screen_form_text_color"
                    android:backgroundTint="@color/registration_screen_form_text_color"
                    android:textColorHint="@color/registration_screen_form_text_color"
                    android:textColorHighlight="@color/registration_screen_form_text_color"
                    android:textColor="@color/registration_screen_form_text_color"
                    android:inputType="textPassword"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/registration_screen_signin_margin_top"
            android:layout_marginBottom="@dimen/registration_screen_signin_margin_bottom"
            android:paddingLeft="@dimen/registration_screen_signin_paddings"
            android:paddingRight="@dimen/registration_screen_signin_paddings"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button_template"
                android:text="@string/SignUpButton" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/registration_screen_form_text_color"/>

        <TextView
            android:layout_marginTop="@dimen/registration_screen_signup_margins"
            android:layout_marginBottom="@dimen/registration_screen_signup_margins"
            android:id="@+id/buttonTransferSignUp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignInText" />

    </LinearLayout>
</LinearLayout>






